--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <script src="/bower_components/jquery/dist/jquery.min.js"></script>
   <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   <!--CSS and JS-->
-  <link href="/dist/CSS/main.css" type="text/css" rel="stylesheet">
-  <script src="/dist/JS/main-min.js"></script>
+  <link href="dist/CSS/main.css" type="text/css" rel="stylesheet">
+  <script src="dist/JS/main-min.js"></script>
 </head>
 
 <body lang="en">
