--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Phillipian's 2019-20 Winter Season Preview">
   <meta name="author" content="Anthony Kim">
-  <link rel="icon" type="image/svg" href="/dist/images/dark.svg">
+  <link rel="icon" type="image/svg" href="dist/images/dark.svg">
   <title>Winter 2019-2020 | Season Previews</title>
   <!--Libraries-->
   <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
@@ -21,7 +21,7 @@
 
 <body lang="en">
   <div id="wrapper">
-    <nav><a href="http://phillipian.net"> <img src="/dist/images/light.svg"></a></nav>
+    <nav><a href="http://phillipian.net"> <img src="dist/images/light.svg"></a></nav>
     <div id="body">
       <header style="background-image:url(../../dist/images/cover.jpg); background-position: center center; background-size: cover;">
         <div class="text">
@@ -53,7 +53,7 @@
             “Last year we didn’t have time to do any get-to-know-you type things, because of the way the breaks were spaced, but this year we had a little meeting and talked about our goals and got to know each other better, so I definitely think that can help with the team dynamic and overall pushing each other to be the best that we can be in practice,” added Vensel.
             Andover’s first meet will be on January 11 at home against Choate.
           </p>
-          <div class="half-width"> <img src="/dist/images/previews/bvf.trynne.jpg">
+          <div class="half-width"> <img src="dist/images/previews/bvf.trynne.jpg">
             <p class="credits">T.Rynne / The Phillipian</p>
             <p class="caption">Andover has defeated Exeter for the past five years.</p>
           </div>
@@ -76,7 +76,7 @@ According to Co-Captain Arnold Su ’20, although there are no meets in the upco
 Even with a large number of new swimmers, the team looks to work on its unity in hopes to replicate last year’s successful season.
 Fox wrote, “Seven of the 18 members of the swimming team are new to Andover, and only six members are in their third or fourth season with us. So, among our challenges, this season is the complexity of assimilation: having the program learn from, and adapt to, this great influx of newer swimmers while at the same time having them learn from, and adapt to, the program.”</p>
 <p><i>Editor’s Note: Ralph Lam ’22 is an Associate Video Editor for</i> The Phillipian.</p>
-          <div class="half-width"> <img src="/dist/images/previews/gfh.rprem.jpg">
+          <div class="half-width"> <img src="dist/images/previews/gfh.rprem.jpg">
             <p class="credits">R.Prem / The Phillipian</p>
             <p class="caption">Andover Field Hockey has won three consecutive games against Exeter.</p>
           </div>
@@ -95,7 +95,7 @@ According to Head Coach Rebecca Hession, the team is looking to use these two we
 “Our block of December is a really important time for the team to begin to establish routines and rhythms, and we have our opportunity to have our first scrimmage before we leave for break, which… is just a chance to take stock of where we are as a team,” said Hession.
 The team has its first meet this Saturday against Wilbraham, Governor's, and Andover High School.
 </p>
-          <div class="half-width"> <img src="/dist/images/previews/bvs.amacaya.jpg">
+          <div class="half-width"> <img src="dist/images/previews/bvs.amacaya.jpg">
             <p class="credits">A.Macaya / The Phillipian</p>
             <p class="caption">Andover and Exeter tied 0-0 in last year’s contest.</p>
           </div>
@@ -118,7 +118,7 @@ According to Fleury, the team looks to use its meet against Exeter as motivation
 “I think beating Exeter will be the biggest challenge. It will take staying focused throughout the whole year and just having that goal in the back of our minds during the season. And I think that will lead to a victory at Andover/Exeter,” said Fleury.
 He continued, “We were very successful at the smaller meets throughout the season and at our meets that we had at Harvard. Exeter is a very strong team but … we’re a [strong] team as well so I think that this year we should see a lot more success.”
 </p>
-          <div class="half-width"> <img src="/dist/images/previews/gvs.dtuller.jpg">
+          <div class="half-width"> <img src="dist/images/previews/gvs.dtuller.jpg">
             <p class="credits">D.Tuller / The Phillipian</p>
             <p class="caption">Andover Girls Soccer beat Exeter 2-1 last season.</p>
           </div>
@@ -135,7 +135,7 @@ Ndiaye, Mafi Pinot ’22, and Karen Wang ’23 are new members to the team. Acco
 In addition to regular practices, the team worked on establishing a feeling of togetherness during the preseason.
 Elliott wrote, “We are working on building from our strengths and becoming stronger, quicker, more accurate, and more strategic players. We are working on developing a strong sense of camaraderie and Non Sibi spirit. I firmly believe that we play better as individuals when we are competing for something bigger than ourselves.”
 </p>
-          <div class="half-width"> <img src="/dist/images/previews/gvvb.mcallahan.jpg">
+          <div class="half-width"> <img src="dist/images/previews/gvvb.mcallahan.jpg">
             <p class="credits">M.Callahan / The Phillipian</p>
             <p class="caption">Andover Girls Volleyball suffered a loss against Exeter during last year’s Andover/Exeter Weekend.</p>
           </div>
@@ -153,7 +153,7 @@ The team looks to the leadership of its three Seniors as it works to strengthen 
 Comyns added, “The seniors really care about everyone and their improvement… I think most people wish they were a little more fit, but we’ve done fitness after almost every practice.”
 After losing its first matchup away at Belmont Hill, the team hopes to rebound as it starts the 2019-2020 season.
 </p>
-          <div class="half-width"> <img src="/dist/images/previews/bvwp.rprem.jpg">
+          <div class="half-width"> <img src="dist/images/previews/bvwp.rprem.jpg">
             <p class="credits">R.Prem / The Phillipian</p>
             <p class="caption">Boys Varsity Waterpolo will play Exeter in Interschols this coming Saturday</p>
           </div>
@@ -179,7 +179,7 @@ Amelia Meyer ’21 is looking forward to the Andover/Exeter competition towards 
 “I'm definitely looking forward to [Andover/Exeter]… The vibes at A/E are so cool, especially because we had our winter game at Exeter last year, and the stands are just filled and everyone is so loud, there is pounding on the glass, just the community support is rad,” said Meyer.
 Andover looks to continue its offensive success in its third matchup against Dexter Southfield on Saturday.
 </p>
-          <div class="half-width"> <img src="/dist/images/previews/GXC.rprem.jpg">
+          <div class="half-width"> <img src="dist/images/previews/GXC.rprem.jpg">
             <p class="credits">R.Prem / The Phillipian</p>
             <p class="caption">Girls Cross Country will try to win the championship this year after coming in second to Exeter in 2016.</p>
           </div>
@@ -204,7 +204,7 @@ According to Mojmir Petras ’21, the team is starting to see the different hock
 Andover’s primary goal for the season is to finish as one of the top 8 teams in the league and to successfully make it to playoffs, according to Shelest.
 “A big goal would be to get to the Elite 8, finish in the top eight in the rankings. We just have to work as a team and listen to what our coaches tell us to do… The team is excited to just win games with the boys and have a good team dynamic and a good bond with each other,” said Shelest.
 </p>
-          <div class="half-width"> <img src="/dist/images/previews/bxc.rprem.jpg">
+          <div class="half-width"> <img src="dist/images/previews/bxc.rprem.jpg">
             <p class="credits">R.Prem / The Phillipian</p>
             <p class="caption">Andover Boys Cross Country suffered a loss against Exeter last season.</p>
           </div>
@@ -223,7 +223,7 @@ Harris said, “We’ve been doing a lot of running and think that’s a big dif
 According to new player Alanna Olsen ’23, the team has some of its toughest competitors early on in the season and therefore hopes to start the season off on a high note.
 Olsen said, “We have two of our hardest games coming up on Wednesday and Saturday, so I hope we can play at our best during those games and utilize the skills we have been practicing effectively throughout. I think we already have a pretty strong bond as a team, but I hope as time goes on, we can become even closer and continue to improve, which will hopefully lead to victories.”
 </p>
-          <div class="half-width"> <img src="/dist/images/previews/gvvb.mcallahan.jpg">
+          <div class="half-width"> <img src="dist/images/previews/gvvb.mcallahan.jpg">
             <p class="credits">M.Callahan / The Phillipian</p>
             <p class="caption">Andover Girls Volleyball suffered a loss against Exeter during last year’s Andover/Exeter Weekend.</p>
           </div>
@@ -242,7 +242,7 @@ Even with the new additions, Coach Ivory believes the team’s greatest attribut
 For the upcoming season, the team believes in the concrete goals that it has set for itself and each player recognizes what is expected by the coaching staff, according to Johnson.
 “We are expecting to win. The goal is to make the playoffs and win a championship. However, we are not the most deep and talented team, so Coach is expecting us to play hard, execute, and work together as one,” said Johnson.
 </p>
-          <div class="half-width"> <img src="/dist/images/previews/bvwp.rprem.jpg">
+          <div class="half-width"> <img src="dist/images/previews/bvwp.rprem.jpg">
             <p class="credits">R.Prem / The Phillipian</p>
             <p class="caption">Boys Varsity Waterpolo will play Exeter in Interschols this coming Saturday</p>
           </div>
@@ -267,7 +267,7 @@ Gallaudet added, “It’s really positive! I like the energy a lot. Everyone is
 Claire De Saint Phalle believes that the team will be able to build off of its success last season.
 “[Our goal is] doing the best we can as a team. Last year the girl’s team had a pretty good season, some of the boys did as well. [We are hoping] just keep up the good work from last year,” she said.
 </p>
-          <div class="half-width"> <img src="/dist/images/previews/GXC.rprem.jpg">
+          <div class="half-width"> <img src="dist/images/previews/GXC.rprem.jpg">
             <p class="credits">R.Prem / The Phillipian</p>
             <p class="caption">Girls Cross Country will try to win the championship this year after coming in second to Exeter in 2016.</p>
           </div>
@@ -291,7 +291,7 @@ One of the team’s goals for the season will be to succeed against Phillips Exe
 According to Nugent, with the season already underway, the team has been emphasizing a “no quit” attitude when it comes to its matches.
 Nugent wrote, “Our kids can lose matches but I fully expect them to step on the mat and give it their all for the full six minutes. Work hard, show your opponent what you're made of, and never give up. No quit is on the back of all my t-shirts. Go hard or go home.”
 </p>
-          <div class="half-width"> <img src="/dist/images/previews/bxc.rprem.jpg">
+          <div class="half-width"> <img src="dist/images/previews/bxc.rprem.jpg">
             <p class="credits">R.Prem / The Phillipian</p>
             <p class="caption">Andover Boys Cross Country suffered a loss against Exeter last season.</p>
           </div>
